Notes list and routing

--- a/app/index.html
+++ b/app/index.html
@@ -36,23 +36,25 @@
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/lodash/dist/lodash.compat.js"></script>
         <script src="bower_components/backbone/backbone.js"></script>
+        <script src="bower_components/q/q.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/main.js -->
         <script src="scripts/main.js"></script>
         <script src="scripts/templates.js"></script>
+        <script src="scripts/models/note-content.js"></script>
         <script src="scripts/models/note.js"></script>
-        <script src="scripts/collections/notes.js"></script>
-        <script src="scripts/collections/notebooks.js"></script>
         <script src="scripts/models/notebook.js"></script>
         <script src="scripts/views/notebooks.js"></script>
         <script src="scripts/views/notes.js"></script>
-        <script src="scripts/views/note.js"></script>
+        <script src="scripts/views/note-content.js"></script>
         <script src="scripts/collections/notebook.js"></script>
         <script src="scripts/collections/note.js"></script>
-        <script src="scripts/routes/app.js"></script>
+        <script src="scripts/components/notebooks.js"></script>
+        <script src="scripts/components/notes.js"></script>
+        <script src="scripts/components/note-content.js"></script>
         <script src="scripts/views/toolbar.js"></script>
-        <script src="scripts/models/note-content.js"></script>
+        <script src="scripts/routes/app.js"></script>
         <!-- endbuild -->
 </body>
 </html>
