--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
         <script src="scripts/main.js"></script>
         <script src="scripts/templates.js"></script>
         <script src="scripts/models/note-content.js"></script>
+        <script src="scripts/models/note-draft.js"></script>
         <script src="scripts/models/note.js"></script>
         <script src="scripts/models/notebook.js"></script>
         <script src="scripts/views/notebooks.js"></script>
